--- a/package.json
+++ b/package.json
@@ -3,9 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^3.0.0-alpha.10",
+    "classnames": "^2.2.6",
+    "immutable": "^4.0.0-rc.12",
+    "invariant": "^2.2.4",
+    "lodash": "^4.17.11",
+    "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "redux": "^4.0.1",
+    "redux-form": "^8.1.0",
+    "redux-immutable": "^4.0.0",
+    "redux-persist": "^5.10.0",
+    "redux-saga": "^1.0.1",
+    "reduxsauce": "^1.0.1",
+    "reselect": "^4.0.0",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,5 +38,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "eslint-config-rallycoding": "^3.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3"
+  }
 }
