--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^3.0.2",
     "@material-ui/styles": "^3.0.0-alpha.10",
     "classnames": "^2.2.6",
+    "firebase": "^5.8.4",
     "immutable": "^4.0.0-rc.12",
     "invariant": "^2.2.4",
     "lodash": "^4.17.11",
@@ -14,6 +15,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-redux": "^6.0.1",
     "react-scripts": "2.1.5",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
