resolvendo o problema do eslint

--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint-config-rallycoding": "^3.2.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3"
+    "eslint-config-rallycoding": "^2.0.0"    
   }
 }
