--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "react-select": "^2.4.1",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-immutable": "^4.0.0",
