--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "redux-saga": "^1.0.1",
     "reduxsauce": "^1.0.1",
     "reselect": "^4.0.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "typeface-roboto": "^0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
